--- a/index.html
+++ b/index.html
@@ -592,8 +592,9 @@
           // String must contain numeric characters (1...9)
           unsigned int str_to_uint(const char * str) {
               unsigned int ret_val = 0;
-              for (int i = 0; str[i]; i++)
-                  ret_val += pow(10, i) * (str[i] - 48);
+              for (int i = 0, j = strlen(str) - 1; str[i];
+                  i++, j--)
+                  ret_val += pow(10, j) * (str[i] - 48);
               return ret_val;
           }
         </code>
