Add string.h header

--- a/index.html
+++ b/index.html
@@ -588,6 +588,7 @@
       <pre>
         <code class="C++ hljs objectivec">
           #include &lt;math.h&gt;
+          #include &lt;string.h&gt;
 
           // String must contain numeric characters (1...9)
           unsigned int str_to_uint(const char * str) {
