Add project github repo address

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
         اگه اشتباهی در کد&zwnj;ها پیدا کردید، مثالی هست که فکر میکنید ننوشتم و یا پیشنهادی داشتید و یا صرفا برای فرستادن اسپم :) میتونید با ایمیل زیر در تماس باشید
         &zwnj;&zwnj;&zwnj;&zwnj;<br>
         h.mahdavipanah@gmail.com
+        <br />
+        این صفحه و پروژه متن باز و آزاد است و میتونید از آدرس زیر به سورس اون دسترسی داشته باشید        
+        ‌<br />
+        <a target="_blank" href="https://github.com/mahdavipanah/mabani/">github.com/mahdavipanah/mabani</a>
     </span>
     </div>
   <div id="examplesMenu" class="ui bottom vertical attached menu" style="
